mesh/east-west/service-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vm-cross-network-gateway
  namespace: istio-system
spec:
  selector:
    istio: eastwestgateway
  servers:
  - port:
      number: 15443 #east west gateway mtls port
      name: tls-vm
      protocol: TLS
    tls:
      mode: ISTIO_MUTUAL
    hosts:
    - "my-vm-service.vm.global" # Genau der Host aus dem ServiceEntry
