mesh/east-west/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: vm-service-entry
spec:
  hosts:
  - my-vm-service.vm.global 
  location: MESH_INTERNAL
  ports:
  - number: 5000
    name: http
    protocol: HTTP
  resolution: STATIC
  workloadSelector:
    labels:
      app: my-vm-service
